docker/validator/test/negative-probes/empty_scene.js
// @expectedRule EMPTY_SCENE
// Returns a Group with no children — bounding box is empty.
export default function generate(THREE) {
  return new THREE.Group();
}
